Changes in @NEW@:
  o New Features:
    * Added getLabelsForHost call, and bumped server protocol to 66. (CNY-2771)

Changes in 2.0.39:
  o Bug Fixes:
    * Fixed potential segfault in sqlite bindings when running under
      python 2.6. (CNY-3103)
    * Promoting a binary foo from a to b, and then promoting a group containing
      foo from b to a will no longer cause foo to be unnecessarily repromoted.
      (CNY-3088)
    * Fixed an interaction with loadRecipe overrides used by rmake and
      autoloadRecipes that would cause rmake to not find any matches
      for autoloadRecipes that were included in biarch flavored superclasses.
      (CNY-3090)
    * Redirect components should not have build requires set (CNY-3069)
    * Updates are no longer halted by the signal SIGWINCH, or SIGURG, which are 
      normally ignored. (CNY-3098)
    * getTrovesBySource now returns a list of the accessible binaries associated
      with a source even if the source is not accessible. (CNY-3099)
    * Changeset-based migrations no longer fail when a flavor is dropped
      from the group that is being migrated. (CNY-3101)
  o New Features:
    * Attempting to promote a binary will no longer reclone the binary 
      if a binary is already the latest at the target branch, even if
      there is a later source committed on the target branch. (CNY-3089)

Changes in 2.0.38:
  o Bug Fixes:
    * Conary versions 1.1.20 (April 2007) through 2.0.37, inclusive, use a 
      SHA256 implementation provided by the pycrypto package, which contained 
      an implementation that generates faulty digests for certain message 
      lengths. To compensate, a backward compatibility module that implements 
      bug-for-bug compatibility with the incorrect SHA256 algorithm has been
      added, in order to inter-operate (generate and validate signatures) 
      with Conary versions which use the incorrect SHA256 implementation 
      in pycrypto. (CNY-3086)
           
Changes in 2.0.37: