@@ -1,4 +1,7 @@
 Changes in @NEW@:
+  o Bug Fixes:
+    * keepRequired now recognizes that local troves may have had files
+      removed, preventing file conflicts with incoming troves
   o New Features:
     * Added getLabelsForHost call, and bumped server protocol to 66. (CNY-2771)
 
